<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.xikolo.openhpi.controller.fragments.ProfileFragment">

    <RelativeLayout
        android:id="@+id/containerProfile"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textName"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:text="Log out"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/containerLogin"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="E-Mail"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textEmail"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editEmail"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="Password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textPassword"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editPassword"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:text="Log in"
            android:textSize="20sp" />

    </RelativeLayout>

</FrameLayout>
